--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
                     <p>轻松管理软件源、安装开发环境、优化系统性能，让Linux服务器管理变得简单高效。</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn-primary" aria-label="立即使用SetBox">立即使用</a>
-                        <a href="https://github.com/HeNianLLL/Linux-Setbox" target="_blank" rel="noopener noreferrer" class="btn-secondary" aria-label="查看GitHub仓库">GitHub</a>
+                        <a href="https://github.com/HeNianLLL/Linux-Setbox-1.0.0" target="_blank" rel="noopener noreferrer" class="btn-secondary" aria-label="查看GitHub仓库">GitHub</a>
                     </div>
                 </div>
                 <div class="hero-buttons-mobile">
                     <a href="#download" class="btn-primary" aria-label="立即使用SetBox">立即使用</a>
-                    <a href="https://github.com/HeNianLLL/Linux-Setbox" target="_blank" rel="noopener noreferrer" class="btn-secondary" aria-label="查看GitHub仓库">GitHub</a>
+                    <a href="https://github.com/HeNianLLL/Linux-Setbox-1.0.0" target="_blank" rel="noopener noreferrer" class="btn-secondary" aria-label="查看GitHub仓库">GitHub</a>
                 </div>
                 <div class="hero-terminal">
                     <div class="terminal">
@@ -430,7 +430,7 @@
                     <a href="mailto:henian001@hotmail.com" class="contact-link">henian001@hotmail.com</a>
                 </div>
                 <div class="about-links">
-                    <a href="https://github.com/HeNianLLL/Linux-Setbox" target="_blank" rel="noopener noreferrer" class="about-link">
+                    <a href="https://github.com/HeNianLLL/Linux-Setbox-1.0.0" target="_blank" rel="noopener noreferrer" class="about-link">
                         <span class="link-icon" aria-hidden="true">⭐</span>
                         <span>GitHub 仓库</span>
                     </a>
@@ -463,9 +463,9 @@
                     <div class="footer-column">
                         <h4>社区</h4>
                         <ul>
-                            <li><a href="https://github.com/HeNianLLL/Linux-Setbox" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-                            <li><a href="https://github.com/HeNianLLL/Linux-Setbox/issues" target="_blank" rel="noopener noreferrer">Issues</a></li>
-                            <li><a href="https://github.com/HeNianLLL/Linux-Setbox/pulls" target="_blank" rel="noopener noreferrer">Pull Requests</a></li>
+                            <li><a href="https://github.com/HeNianLLL/Linux-Setbox-1.0.0" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                            <li><a href="https://github.com/HeNianLLL/Linux-Setbox-1.0.0/issues" target="_blank" rel="noopener noreferrer">Issues</a></li>
+                            <li><a href="https://github.com/HeNianLLL/Linux-Setbox-1.0.0/pulls" target="_blank" rel="noopener noreferrer">Pull Requests</a></li>
                         </ul>
                     </div>
                 </nav>
