--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         </div>
                         <div class="terminal-body" id="terminalBody">
                             <div class="terminal-content" data-lang="zh">
-                                <div class="terminal-line">$ bash &lt;(curl -sSL https://linuxset.com/linux-setbox-cn.sh)</div>
+                                <div class="terminal-line">$ bash &lt;(curl -sSL https://linuxset.com/setbox-cn.sh)</div>
                                 <div class="terminal-line">========================================</div>
                                 <div class="terminal-line">      SetBox v1.0.0</div>
                                 <div class="terminal-line">========================================</div>
@@ -218,7 +218,7 @@
                                 <div class="terminal-line"> 0) 退出</div>
                             </div>
                             <div class="terminal-content hidden" data-lang="en">
-                                <div class="terminal-line">$ bash &lt;(curl -sSL https://linuxset.com/linux-setbox-en.sh)</div>
+                                <div class="terminal-line">$ bash &lt;(curl -sSL https://linuxset.com/setbox-en.sh)</div>
                                 <div class="terminal-line">========================================</div>
                                 <div class="terminal-line">      SetBox v1.0.0</div>
                                 <div class="terminal-line">========================================</div>
@@ -362,7 +362,7 @@
                 <article class="download-card">
                     <h3>在线运行</h3>
                     <div class="code-block">
-                        <code aria-label="在线运行命令">bash &lt;(curl -sSL https://linuxset.com/linux-setbox-cn.sh)</code>
+                        <code aria-label="在线运行命令">bash &lt;(curl -sSL https://linuxset.com/setbox-cn.sh)</code>
                         <button class="copy-btn" aria-label="复制命令">📋</button>
                     </div>
                     <p class="download-note">复制命令到终端执行，即可开始使用SetBox</p>
@@ -370,12 +370,12 @@
                 <article class="download-card">
                     <h3>手动下载</h3>
                     <div class="code-block">
-                        <code aria-label="下载命令">wget https://linuxset.com/linux-setbox-cn.sh</code>
+                        <code aria-label="下载命令">wget https://linuxset.com/setbox-cn.sh</code>
                         <button class="copy-btn" aria-label="复制命令">📋</button>
                     </div>
                     <p class="download-note">下载后执行以下命令：</p>
                     <div class="code-block">
-                        <code aria-label="执行命令">chmod +x linux-setbox-cn.sh && ./linux-setbox-cn.sh</code>
+                        <code aria-label="执行命令">chmod +x setbox-cn.sh && ./setbox-cn.sh</code>
                         <button class="copy-btn" aria-label="复制命令">📋</button>
                     </div>
                 </article>
